--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gameshowcases</title>
+    <title>Gaming Showcases</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 <div class="container">
-
 </div>
 <script src="script.js"></script>
 </body>
