--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaming Showcases</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Radio+Canada:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+<header class="header">
+    <h1 class="headerTitle" >Gaming Showcases</h1>
+    <h3 class="headerText" style="color: rgba(33, 33, 33, 1); font-size: small;">Inspired by</h3>
+    <h3 class="headerText">
+        <a class="headerLinks" href="https://bsky.app/profile/knoebel.bsky.social" target="_blank" rel="noopener noreferrer">@knoebel.bsky.social</a>
+    </h3>
+    <h3 class="headerText" style="color: rgba(33, 33, 33, 1); font-size: small;">Developed by</h3>
+    <h3 class="headerText">
+        <a class="headerLinks" href="https://bsky.app/profile/neiloru.bsky.social" target="_blank" rel="noopener noreferrer" >@neiloru.bsky.social</a>
+    </h3>
+</header>
 <div class="container">
 </div>
 <script src="script.js"></script>
